 ** (r428) (Condition):  attempt to call global 'IsResting' (a nil value)
 ** (r428) conditions.lua line 447: attempt to compare nil with number
 ** (r429) Implemented a workaround for Blizzard's mismanagement of color in the Raid Warning Frame text output
 ** (r429) TellMeWhen_Options.lua:1434: attempt to index local "icon" (a nil value)
 ** (r429) An icon/group should no longer be treated as if it has failing conditions after it had conditions that were failing, but those conditions were removed.
 ** (r430) Fixed the list of unitIDs used to guess a unit's class.
 

===v4.8.3===
 * Bug Fixes:
 ** (r423) Events with conditions (Duration, Stacks changed) should now handle animations and sound properly.
 
 ===v4.8.2===
 * Bug Fixes:
 ** (r421) You should no longer lock up when using the GCD condition
 
 ===v4.8.1===
 * Bug Fixes:
 ** (r412) icd.lua:134 attempt to index field 'HELP' (a nil value)
 ** (r413) Meta icons that are sorted by high duration should now diplay the first icon shown if no icons have an active timer
 ** (r414) Combat log icons that have spell filters without defined durations should now properly fall back to the icon-wide duration
 ** (r416) Meta icons that are set to sort should once again sort
 ** (r417) The icon unit setting should now always save when using the dropdown to change it

===v4.8.0===
 * New icon type: Combat Event. Displays information about combat events according to filters that you can set. Full support for events, including text output.
 * Rewrote the entire animation system to allow meta icons to inherit icon animations.
 * Text outputs now substitute a hyperlink for '%s' when appropriate.
 * --You can now leave the unit cooldown icon's "Unit(s) to watch" field blank to track all known units.
 * New animation: Icon: Alpha Flash.
 * Icon animations can now be set to play indefinitely (or until stopped by the Icon: Stop Animations animation trigger).
 * Removed Entangling Roots from the CrowdControl debuff equivalency.